yml file changes

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
   <body>
-    <a href="./pdf.html">pdf</a>
+    <!-- <a href="./pdf.html">pdf</a> -->
     <div id="dropdown-container"></div>
     <div id="display-container"></div>
     <div id="input-container">
@@ -44,7 +44,7 @@
         <button>Submit</button>
       </form>
     </div>
-    <div class="slider-container">
+    <!-- <div class="slider-container">
       <div class="slider">
         <div class="slide">
           <img
@@ -70,9 +70,9 @@
         <button class="btn btn-next">➡️</button>
         <button class="btn btn-prev">⬅️</button>
       </div>
-    </div>
+    </div> -->
 
-    <button class="slide-menu">Menu</button>
+    <!-- <button class="slide-menu">Menu</button>
     <div class="slide-content">
       <div class="content content1"></div>
       <div class="content content2"></div>
@@ -89,7 +89,7 @@
         <div class="front-board">Front</div>
         <div class="back-board">Back</div>
       </div>
-    </div>
+    </div> -->
     <script type="text/javascript" src="./index.js"></script>
   </body>
 </html>
